fixed nav overlaping section headings and fixed js functions

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -40,7 +40,7 @@ body {
 
 .section_heading {
     margin: 0rem 0 5rem 6rem;
-    padding-top: 5rem;
+    padding-top: 8rem;
     font-size: 3rem;
 }
 
